# retailpulse

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dashboard  Makefile  README.md  README_REALTIME.md  app.py  conftest.py  docker-compose.yml  pyproject.toml  realtime_app.py  requirements.txt  retailpulse.code-workspace  run_tests.py
airflow/dags/: gdpr_deletion.py  retailpulse_full_pipeline.py
airflow/tests/unit/: test_dag_integrity.py  test_gdpr_deletion.py
dashboard/: index.html  realtime.html
data_quality/: run_suite.py
dbt/: dbt_project.yml
dbt/macros/: utils.sql
dbt/models/marts/: agg_daily_revenue.sql  agg_user_cohorts.sql  fact_orders.sql  schema.yml
dbt/models/staging/: schema.yml  stg_orders.sql
dbt/snapshots/: snap_users.sql
dbt/tests/: assert_no_negative_revenue.sql
docs/: data_dictionary.md  runbook.md
docs/adr/: ADR-001-technology-stack.md  ADR-002-pii-gdpr-strategy.md  ADR-003-realtime-streaming.md
ingestion/: producer.py
ingestion/airbyte/: google-ads-connection.json
ingestion/debezium/: orders-connector.json
ingestion/kafka_connect/: s3-sink.json
ml/churn/: train.py
ml/demand_forecast/: train.py
ml/feature_store/: feature_definitions.py
ml/serving/: Dockerfile  app.py
realtime/: alerting.py  backpressure.py  replay.py  stream_engine.py
scripts/: backfill.py  check_freshness.py  init_project.py  monitoring.py  simulate_load.py  validate.py
scripts/sql/: 01_schema.sql  02_seed.sql
spark/jobs/: bronze_to_silver.py  sessionize_clicks.py
spark/tests/unit/: test_bronze_to_silver.py  test_sessionize_clicks.py
terraform/environments/dev/: main.tf
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_api.py  test_data_quality.py  test_monitoring.py  test_security.py
