[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "retailpulse"
version = "0.1.0"
description = "End-to-end retail data pipeline portfolio project"
requires-python = ">=3.11"
dependencies = [
    # Ingestion
    "confluent-kafka==2.4.0",
    "fastavro==1.9.4",
    "psycopg2-binary==2.9.9",
    # Orchestration
    "apache-airflow==2.9.2",
    "apache-airflow-providers-apache-kafka==1.3.1",
    # Processing (PySpark installed separately due to JVM dep)
    "delta-spark==3.0.0",
    # Transformation
    "dbt-core==1.8.3",
    "dbt-duckdb==1.8.1",
    # Data quality
    "great-expectations==0.18.15",
    # Warehouse
    "duckdb==0.10.3",
    # Serving
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.1",
    # ML
    "scikit-learn==1.5.0",
    "pandas==2.2.2",
    "pyarrow==16.1.0",
    "mlflow==2.13.2",
    # Utilities
    "python-dotenv==1.0.1",
    "structlog==24.2.0",
    "tenacity==8.3.0",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.7",
    "pytest-mock==3.14.0",
    "ruff==0.4.8",
    "mypy==1.10.0",
    "bandit==1.7.9",
    "pip-audit==2.7.3",
    "types-psycopg2==2.9.21.20240417",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "S", "B"]
ignore = ["S101", "S311"]  # allow assert in tests, pseudo-random ok for mock data

[tool.ruff.per-file-ignores]
"tests/*" = ["S", "N"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests", "airflow/tests", "spark/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "node_modules"]
severity = "medium"
